<resources>
    <string name="app_name">Basketball Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_header">Sign In</string>
    <string name="view_roster">View Roster</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="error_no_name">Please enter a name</string>
    <string name="search">Search</string>
    <string name="player_image">Player Image</string>
    <string name="delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="menu_teamhome">Team Home</string>
    <string name="menu_roster">Roster</string>
    <string name="nav_header_title">Basketball App</string>
    <string name="nav_header_subtitle">Team Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="set_location">Set Location</string>
    <string name="updateTeam">Update Team Info</string>
    <string name="listAllPlayers">Full Player List</string>
    <string name="addNewPlayer">Add New Player</string>
    <string name="error_no_player_selected">Please select a player</string>
    <string name="error_player_does_not_exist">Player does not exist</string>
    <string name="pickImage">Pick Image</string>
    <string name="position_textview">Position</string>
    <string name="error_no_username">Please enter a username</string>
    <string name="select_profile_image">Select Profile Image</string>

    <!-- HINTS-->
    <string name="hint_playerName">Name</string>
    <string name="hint_userName">Username</string>
    <string name="hint_teamName">Team Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_region">Region</string>
    <string name="hint_city">City</string>
    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="messageLoading">Loading</string>
    <string name="allPlayers">All Players</string>
    <string name="freeAgents">Free Agents</string>
    <string name="player_name">Name</string>
    <string name="error_add_player">ERROR: Could not add player, try again.</string>
    <string name="playersNotFound">No Players Found.</string>
    <string name="loading_players">Loading Players</string>
    <string name="loading_player">Loading Player</string>
    <string name="loading_team">Loading Team</string>
    <string name="deleting_player">Deleting Player</string>
    <string name="adding_player">Adding Player</string>
    <string name="adding_player_roster">Adding to Roster</string>
    <string name="firebase_ui">Signup or Login</string>
    <string name="access_control">Access Control</string>
    <string name="menu_map">Map</string>
    <string name="team">Team</string>
    <string name="options">Options</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hint_country">Country</string>
    <string name="team_image">Team Image</string>
    <string name="toggle_mode">Toggle Theme</string>
    <string name="email">email</string>


</resources>