<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/teamHomeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_teamhome" />
        <item
            android:id="@+id/rosterFragment"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_roster" />
        <item
            android:id="@+id/playerList"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/allPlayers" />
        <item
            android:id="@+id/freeAgentListFragment"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/freeAgents" />
        <item
            android:id="@+id/teamDetailFragment"
            android:icon="@drawable/ic_baseline_sports_basketball_24"
            android:title="@string/updateTeam" />
        <item
            android:id="@+id/addPlayerFragment"
            android:icon="@drawable/ic_baseline_sports_basketball_24"
            android:title="@string/addNewPlayer" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/action_send" />
        </menu>
    </item>

    <item android:title="@string/access_control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>