<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
            android:id="@+id/nav_header_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_baseline_sports_basketball_24"
            android:layout_weight="1"/>


    <TextView
            android:layout_weight="1"
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:textSize="11sp"
            android:text="@string/nav_header_subtitle" />
    <TextView
            android:layout_weight="1"
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:textSize="11sp"

            android:text="@string/email"/>

</LinearLayout>