<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.playerdetail.AddPlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/hint_playerName"
                    android:imeOptions="actionDone">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/positionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/position_textview"
                    tools:text="Position" />
                <Spinner
                    android:id="@+id/positionSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_city"
                        android:inputType="text"
                        android:maxLines="1"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:background="@android:color/transparent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/region"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_region"
                        android:inputType="text"
                        android:maxLines="1"
                        android:imeOptions="actionDone" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/image"
                android:contentDescription="@string/player_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_player_image_placeholder"
                />
            <Button
                android:id="@+id/buttonPickImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/pickImage"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/add"
                android:textSize="24sp"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>